--- a/app/src/main/res/drawable/selector_main_tab.xml
+++ b/app/src/main/res/drawable/selector_main_tab.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@android:drawable/btn_star_big_on" android:state_pressed="true" />
-    <item android:drawable="@android:drawable/btn_star_big_off" android:state_pressed="false" />
+    <item android:drawable="@drawable/tab_selected" android:state_selected="true" />
+    <item android:drawable="@drawable/tab_normal" android:state_selected="false" />
 
 </selector>
